[package]
name = "abe-keyserver"
version = "0.1.0"
authors = ["Julian Schuette <julian.schuette@aisec.fraunhofer.de>"]

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rustc-serialize = "0.3"
rocket-simpleauth = "0.3.0"
rabe = { git = "ssh://git@git-int.aisec.fraunhofer.de/sas/rust-abe.git" }
#rabe = { path = "../rust-abe" }

[dependencies.rocket_contrib]
default-features = false
version = "0.3.6"
features = ["json"]
